syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/bernie-pham/ecommercePlatform/pb";

message RefreshTokenReq {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_timeout = 2;
    string new_refresh_token = 3;
    google.protobuf.Timestamp refresh_token_timeout = 4;
}